fix table style on smaller window

--- a/api/public/css/app.css
+++ b/api/public/css/app.css
@@ -171,7 +171,8 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  max-width: 1000px;
+  max-width: 0;
+  width: 40%;
 }
 .table-entries .col-title .title {
   text-transform: capitalize;
@@ -581,7 +582,8 @@ body {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  max-width: 1000px;
+  max-width: 0;
+  width: 40%;
 }
 .table-entries .col-title .title {
   text-transform: capitalize;
